--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -1,14 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20dp"
     tools:context="com.example.hp.bashi.Index">
+
     <TextView
+        android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You are logged in"
-        />
+        android:text="Welcome to bashi!"
+        android:textColor="#3799ef"
+        android:textSize="23dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteY="28dp"
+        tools:layout_editor_absoluteX="152dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginLeft="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button_1"
+        android:layout_below="@+id/welcome"
+        android:onClick="Applyloan"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apply for a loan"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+    <Button
+        android:id="@+id/button_2"
+        android:layout_below="@+id/button_1"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loan history"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+    <Button
+        android:id="@+id/button_3"
+        android:layout_below="@+id/button2"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Debt"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+    <Button
+        android:id="@+id/button_4"
+        android:layout_below="@+id/button_3"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="How it works"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+    <Button
+        android:id="@+id/button_5"
+        android:layout_below="@+id/button_4"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Customer care"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+    <Button
+        android:id="@+id/button_6"
+        android:layout_below="@+id/button_5"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Payback loan"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+
+
+</LinearLayout>
