--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="19dp"
     android:orientation="vertical"
     tools:context="com.example.hp.bashi.MainActivity">
 
@@ -56,7 +56,7 @@
         />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttontwo"
         android:text="Signin"
         android:onClick="signIn"
         android:layout_below="@id/statusText"
@@ -68,10 +68,10 @@
         />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonthree"
         android:text="Signout"
         android:onClick="signOut"
-        android:layout_below="@id/button2"
+        android:layout_below="@id/buttontwo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -81,10 +81,10 @@
         />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/buttonsix"
         android:text="Reset Password"
         android:onClick="resetPassword"
-        android:layout_below="@id/button3"
+        android:layout_below="@id/buttonthree"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -94,17 +94,24 @@
         />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/buttonfive"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:onClick="createAccount"
         android:text="Create Account"
-        android:layout_below="@id/button6"
+        android:layout_below="@id/buttonsix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:textColor="#3799ef"
-
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
         />
+    <Button
+        android:id="@+id/buttonnine"
+        android:layout_below="@id/buttonfive"
+        android:onClick="phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="phone number auth"/>
 
 
 
