--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -22,6 +22,11 @@
         android:layout_marginLeft="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+    <ProgressBar
+        android:id="@+id/indexProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
     <Button
         android:id="@+id/button_1"
@@ -41,7 +46,8 @@
         android:textColor="#3799ef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loan history"
+        android:text="How it works"
+        android:onClick="howitworks"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
     <Button
@@ -51,7 +57,8 @@
         android:textColor="#3799ef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current Debt"
+        android:onClick="customercare"
+        android:text="Customer care"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
     <Button
@@ -61,7 +68,7 @@
         android:textColor="#3799ef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="How it works"
+        android:text="Loan history"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
     <Button
@@ -71,7 +78,7 @@
         android:textColor="#3799ef"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Customer care"
+        android:text="Current Debt"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
     <Button
@@ -82,6 +89,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Payback loan"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_below="@+id/button_6"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:textColor="#3799ef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:onClick="signOut"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
 
