--- a/app/src/main/res/layout/create_account_activity.xml
+++ b/app/src/main/res/layout/create_account_activity.xml
@@ -72,6 +72,13 @@
         android:background="#3799ef"
         android:textColor="#ffffff"
         />
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 
 
