--- a/app/src/main/res/layout/activity_customer_care.xml
+++ b/app/src/main/res/layout/activity_customer_care.xml
@@ -6,12 +6,14 @@
     android:layout_height="wrap_content"
     android:padding="20dp"
     android:orientation="vertical"
+    android:background="@drawable/bluep"
     tools:context="com.example.hp.bashi.Customer_care">
 
     <TextView
         android:id="@+id/call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
         android:text="For your questions and enquiries regarding this application, contact our admin by clicking the button below."
         />
     <Button
@@ -25,6 +27,14 @@
         android:textColor="#ffffff"
         android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
+        />
+    <TextView
+        android:id="@+id/email"
+        android:layout_below="@+id/callbutton"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Or contact us via email at supportbashi@gmail.com"
         />
 
 </LinearLayout>
