--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@drawable/udi"
     tools:context="com.example.hp.bashi.Index">
+
 
     <TextView
         android:id="@+id/welcome"
@@ -69,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loan history"
+        android:onClick="openLoanHistory"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
     <Button
@@ -79,17 +82,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Current Debt"
+        android:onClick="Debt"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
 
-    <Button
-        android:id="@+id/button_6"
-        android:layout_below="@+id/button_5"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Payback loan"
-        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
+    <!--<Button-->
+        <!--android:id="@+id/button_6"-->
+        <!--android:layout_below="@+id/button_5"-->
+        <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
+        <!--android:textColor="#3799ef"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Payback loan"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />-->
     <Button
         android:id="@+id/logout_button"
         android:layout_below="@+id/button_6"
