--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -12,59 +12,82 @@
         android:id="@+id/welcome2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to bashi!"
+        android:text="Fill in details appropritely!"
         android:textColor="#3799ef"
-        android:textSize="25dp"
+        android:textSize="22dp"
         android:textStyle="bold"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="57dp" />
 
     <EditText
-        android:id="@+id/Account_name"
+        android:id="@+id/account_name"
         android:layout_below="@id/welcome2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="26dp"
         android:hint="Account name"
+        android:visibility="gone"
         />
     <EditText
-        android:id="@+id/Account_number"
-        android:layout_below="@id/Account_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="Account number"
-        />
-    <EditText
-        android:id="@+id/BVN"
-        android:layout_below="@id/Account_number"
+        android:id="@+id/bvn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="BVN"
+        android:visibility="gone"
+        android:inputType="number"
         />
+    <TextView
+        android:id="@+id/bvn_update"
+        android:hint="checking..."
+        android:textStyle="italic"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <EditText
-        android:id="@+id/Amount"
-        android:layout_below="@id/BVN"
+        android:id="@+id/account_number"
+        android:layout_below="@id/bvn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:hint="Account number"
+        android:inputType="number"
+        />
+
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_below="@id/account_number"
+        android:layout_marginBottom="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/amount"
+        android:layout_below="@id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:inputType="number"
         android:hint="How much do you want to borrow?"
         />
 
     <Button
-        android:id="@+id/Apply"
-        android:layout_below="@id/Amount"
+        android:id="@+id/apply"
+        android:layout_below="@id/amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Apply"
         android:textStyle="bold"
         android:background="#3799ef"
         android:textColor="#ffffff"
+        android:onClick="applyForLoan"
         />
-
-
-
-
+    <ProgressBar
+        android:id="@+id/progress_bar_apply"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
