--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:padding="19dp"
     android:orientation="vertical"
+    android:background="@drawable/cash"
     tools:context="com.example.hp.bashi.MainActivity">
 
     <EditText
@@ -17,6 +18,8 @@
         android:layout_marginBottom="16dp"
         android:hint="email"
         android:background="#11000000"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         android:layout_marginLeft="15dp"
         android:drawableLeft="@drawable/ic_action_email"
 
@@ -30,6 +33,8 @@
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="#11000000"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         android:layout_centerHorizontal="true"
         android:drawableLeft="@drawable/ic_action_password"
         android:layout_marginBottom="16dp"
@@ -66,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
         />
@@ -100,16 +105,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
         />
-    <Button
-        android:id="@+id/buttonfour"
-        android:layout_below="@id/buttonthree"
-        android:onClick="phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="phone number auth"/>
+    <!--<Button-->
+        <!--android:id="@+id/buttonfour"-->
+        <!--android:layout_below="@id/buttonthree"-->
+        <!--android:onClick="phone"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="phone number auth"/>-->
 
 
 
