--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="4"
         android:scaleType="centerCrop"
-        android:src="@drawable/loan" />
+        android:src="@drawable/coinsp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
