--- a/app/src/main/res/layout/create_account_activity.xml
+++ b/app/src/main/res/layout/create_account_activity.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:padding="19dp"
     android:orientation="vertical"
+    android:background="@drawable/austi"
     tools:context="com.example.hp.bashi.CreateAccountActivity">
     <EditText
         android:id="@+id/create_last_name"
@@ -13,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="lastname"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
         />
     <EditText
         android:layout_below="@id/create_last_name"
@@ -21,6 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="othernames"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
         />
     <EditText
         android:layout_below="@id/create_other_name"
@@ -29,6 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="occupation"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
         />
     <EditText
         android:layout_below="@id/create_occupation"
@@ -37,6 +46,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="state"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
         />
     <EditText
         android:layout_below="@id/create_State"
@@ -45,6 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:hint="email"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
         />
     <EditText
         android:layout_below="@id/create_email"
@@ -53,7 +68,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:inputType="textPassword"
-        android:hint="password"/>
+        android:hint="password"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
+        />
+
     <EditText
         android:layout_below="@id/create_password"
         android:id="@+id/create_password_repeat"
@@ -61,7 +81,32 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:inputType="textPassword"
-        android:hint="repeat password"/>
+        android:hint="repeat password"
+        android:textColor="#ffffff"
+        android:textColorHint="#ffffff"
+
+        />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Agree to terms?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            />
+        <CheckBox
+            android:id="@+id/term_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="read terms and condition"
+            android:onClick="readTerms"
+            android:layout_width="wrap_content"
+            android:textColor="#ffffff"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <Button
         android:layout_below="@id/create_password_repeat"
         android:id="@+id/create_submit_button"
@@ -72,6 +117,7 @@
         android:background="#3799ef"
         android:textColor="#ffffff"
         />
+
     <ProgressBar
         android:visibility="gone"
         android:id="@+id/progressBar3"
