--- a/app/src/main/res/layout/activity_bvn.xml
+++ b/app/src/main/res/layout/activity_bvn.xml
@@ -9,7 +9,7 @@
         android:layout_centerInParent="true"
         android:layout_margin="@dimen/auth_method_button_drawablePadding"
         android:padding="@dimen/auth_method_button_drawablePadding"
-        android:background="#70303f9f"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -18,9 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <EditText
-            android:hint="BVN"
+            android:hint="Please put in your BVN"
             android:layout_below="@id/bvn_user_name"
             android:id="@+id/bvn_edit_text"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <Button
@@ -33,8 +36,10 @@
         <Button
             android:layout_below="@id/bvn_button"
             android:id="@+id/bvn_button_two"
+            android:inputType="number"
             android:layout_width="match_parent"
-            android:text="verify bvn"
+            android:text="Verify BVN"
+            android:textColor="#3799ef"
             android:onClick="checkBVN"
             android:layout_height="wrap_content" />
         <ProgressBar
