--- a/app/src/main/res/layout/activity_debt.xml
+++ b/app/src/main/res/layout/activity_debt.xml
@@ -14,15 +14,17 @@
         android:textSize="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
-        android:text="Your current debt + 10% interest is"
+        android:text="Your current debt + 10% interest to be paid back in a month time is"
         />
     <Button
         android:id="@+id/debtbutton"
         android:layout_below="@id/debttext"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#ffffff"
         android:text="Tap to pay back loan"
         android:onClick="payLoan"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />
