--- a/app/src/main/res/layout/activity_how_it_works.xml
+++ b/app/src/main/res/layout/activity_how_it_works.xml
@@ -15,7 +15,7 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:padding="20dp"
-        android:background="@drawable/bluep"
+        android:background="@drawable/backg"
         android:text="@string/how"/>
 
 </android.support.constraint.ConstraintLayout>
