--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@drawable/udi"
+    android:background="@drawable/backg"
     tools:context="com.example.hp.bashi.Index">
 
 
@@ -14,8 +14,8 @@
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to bashi!"
-        android:textColor="#3799ef"
+        android:text="Welcome to iLoan!"
+        android:textColor="#ffffff"
         android:textSize="23dp"
         android:textStyle="bold"
         tools:layout_editor_absoluteY="28dp"
@@ -35,7 +35,7 @@
         android:layout_below="@+id/welcome"
         android:onClick="Applyloan"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Apply for a loan"
@@ -45,7 +45,7 @@
         android:id="@+id/button_2"
         android:layout_below="@+id/button_1"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="How it works"
@@ -56,7 +56,7 @@
         android:id="@+id/button_3"
         android:layout_below="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="customercare"
@@ -67,7 +67,7 @@
         android:id="@+id/button_4"
         android:layout_below="@+id/button_3"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Loan history"
@@ -78,7 +78,7 @@
         android:id="@+id/button_5"
         android:layout_below="@+id/button_4"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Current Debt"
@@ -98,7 +98,7 @@
         android:id="@+id/logout_button"
         android:layout_below="@+id/button_6"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:textColor="#3799ef"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
