--- a/app/src/main/res/layout/create_account_activity.xml
+++ b/app/src/main/res/layout/create_account_activity.xml
@@ -45,7 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:hint="state"
+        android:hint="Average monthly income"
+        android:inputType="number"
         android:textColor="#ffffff"
         android:textColorHint="#ffffff"
 
